[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/timelineNode.gd" type="Script" id=1]

[node name="TimelineGraphNode" type="GraphNode"]
margin_right = 128.0
margin_bottom = 88.0
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 112.0
margin_bottom = 24.0

[connection signal="focus_entered" from="." to="." method="_on_TimelineGraphNode_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TimelineGraphNode_focus_exited"]
[connection signal="slot_updated" from="." to="." method="_on_TimelineGraphNode_slot_updated"]
